[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/FieldMap.gd" type="Script" id=1]

[node name="FieldMap" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -374.0
margin_bottom = 6.10352e-05
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PatchGrid" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointHolder" type="Node" parent="."]

[node name="SheepHolder" type="Node" parent="."]

[node name="WolfHolder" type="Node" parent="."]
